adjust width of< td> to prevent the in vitro side menu title from wraping to another line.
SVN-Revision: 11310

--- a/web/css/sidemenu.css
+++ b/web/css/sidemenu.css
@@ -338,7 +338,7 @@ table.subTitleTable {
 }
 
 td.tdfill {
-	width: 30%;
+	width: 6%;
 }
 
 table.subTitleTable td.tdfill {
